--- a/template/app/views/layouts/application.html.haml
+++ b/template/app/views/layouts/application.html.haml
@@ -1,10 +1,23 @@
 !!! 5
 - html_tag :lang => "en" do
-  = render :partial => "layouts/head"
+  %head
+    %meta{:charset => "utf-8"}
+    %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
+
+    %title= yield :title
+
+    %meta{:content => "", :name => "description"}
+    %meta{:content => "", :name => "author"}
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
+
+    = stylesheet_link_tag "application"
+    = controller_stylesheet
+
+    = csrf_meta_tag
+
   %body
-    #container
-      #header
-      #main= yield
-      #footer
-    -# Javascript at the bottom for fast page loading
-    = render :partial => "layouts/javascripts"
+    = yield
+
+    = jquery_tag
+    = javascript_include_tag "rails", "application"
+    = render :partial => "layouts/analytics" if Rails.env.production?
